--- a/src/main/resources/assets/metallurgymod/lang/en_us.json
+++ b/src/main/resources/assets/metallurgymod/lang/en_us.json
@@ -1,5 +1,8 @@
 {
   "item.metallurgymod.raw_tin_ore": "Raw Tin Ore",
   "item.metallurgymod.tin_ingot": "Tin Ingot",
+
+  "itemGroup.metallurgymod.metallurgy_group": "Metallurgy",
+
   "block.metallurgymod.tin_ore": "Tin Ore"
 }
