silver and manganese

--- a/src/main/resources/assets/metallurgymod/lang/en_us.json
+++ b/src/main/resources/assets/metallurgymod/lang/en_us.json
@@ -67,5 +67,7 @@
 
 
 
-  "block.metallurgymod.tin_ore": "Tin Ore"
+  "block.metallurgymod.tin_ore": "Tin Ore",
+  "block.metallurgymod.manganese_ore": "Manganese Ore",
+  "block.metallurgymod.silver_ore": "Silver Ore"
 }
