--- a/src/main/resources/assets/metallurgymod/lang/en_us.json
+++ b/src/main/resources/assets/metallurgymod/lang/en_us.json
@@ -6,8 +6,8 @@
 
   "item.metallurgymod.raw_tin_ore": "Raw Tin Ore",
   "item.metallurgymod.tin_ingot": "Tin Ingot",
-
-
+  "item.metallurgymod.manganese_dust": "Manganese Dust",
+  "item.metallurgymod.manganese_ingot": "Manganese Ingot",
 
 
 
