Raw Silver Ore + Silver Ingot + Smelting

--- a/src/main/resources/assets/metallurgymod/lang/en_us.json
+++ b/src/main/resources/assets/metallurgymod/lang/en_us.json
@@ -8,7 +8,8 @@
   "item.metallurgymod.tin_ingot": "Tin Ingot",
   "item.metallurgymod.manganese_dust": "Manganese Dust",
   "item.metallurgymod.manganese_ingot": "Manganese Ingot",
-
+  "item.metallurgymod.raw_silver_ore": "Raw Silver Ore",
+  "item.metallurgymod.silver_ingot": "Silver Ingot",
 
 
 
