--- a/src/main/resources/assets/metallurgymod/lang/en_us.json
+++ b/src/main/resources/assets/metallurgymod/lang/en_us.json
@@ -10,8 +10,8 @@
   "item.metallurgymod.manganese_ingot": "Manganese Ingot",
   "item.metallurgymod.raw_silver_ore": "Raw Silver Ore",
   "item.metallurgymod.silver_ingot": "Silver Ingot",
-
-
+  "item.metallurgymod.raw_zinc_ore": "Raw Zinc Ore",
+  "item.metallurgymod.zinc_ingot": "Zinc Ingot",
 
 
 
