Raw Platinum Ore + Platinum Ingot + Smelting

--- a/src/main/resources/assets/metallurgymod/lang/en_us.json
+++ b/src/main/resources/assets/metallurgymod/lang/en_us.json
@@ -12,6 +12,8 @@
   "item.metallurgymod.silver_ingot": "Silver Ingot",
   "item.metallurgymod.raw_zinc_ore": "Raw Zinc Ore",
   "item.metallurgymod.zinc_ingot": "Zinc Ingot",
+  "item.metallurgymod.raw_platinum_ore": "Raw Platinum Ore",
+  "item.metallurgymod.platinum_ingot": "Platinum Ingot",
 
 
 
