--- a/src/main/resources/assets/metallurgymod/lang/en_us.json
+++ b/src/main/resources/assets/metallurgymod/lang/en_us.json
@@ -72,5 +72,6 @@
 
   "block.metallurgymod.tin_ore": "Tin Ore",
   "block.metallurgymod.manganese_ore": "Manganese Ore",
-  "block.metallurgymod.silver_ore": "Silver Ore"
+  "block.metallurgymod.silver_ore": "Silver Ore",
+  "block.metallurgymod.iron_smelter": "Iron Smelter"
 }
