--- a/src/main/resources/assets/metallurgymod/lang/en_us.json
+++ b/src/main/resources/assets/metallurgymod/lang/en_us.json
@@ -14,10 +14,13 @@
   "item.metallurgymod.zinc_ingot": "Zinc Ingot",
   "item.metallurgymod.raw_platinum_ore": "Raw Platinum Ore",
   "item.metallurgymod.platinum_ingot": "Platinum Ingot",
-
-
-
-
+  "item.metallurgymod.angmallen_ingot": "Angmallen Ingot",
+  "item.metallurgymod.bronze_ingot": "Bronze Ingot",
+  "item.metallurgymod.damascus_steel_ingot": "Damascus Steel Ingot",
+  "item.metallurgymod.steel_ingot": "Steel Ingot",
+  "item.metallurgymod.hepatizon_ingot": "Hepatizon Ingot",
+  "item.metallurgymod.electrum_ingot": "Electrum Ingot",
+  "item.metallurgymod.brass_ingot": "Brass Ingot",
 
 
 
