Mod Tools Items for every tool material + Craft Recipes for Tools Items + ToolMaterial(Fixed) + Without Textures(WIP)

--- a/src/main/resources/assets/metallurgymod/lang/en_us.json
+++ b/src/main/resources/assets/metallurgymod/lang/en_us.json
@@ -21,15 +21,51 @@
   "item.metallurgymod.hepatizon_ingot": "Hepatizon Ingot",
   "item.metallurgymod.electrum_ingot": "Electrum Ingot",
   "item.metallurgymod.brass_ingot": "Brass Ingot",
-
-
-
-
-
-
-
-
-
+  "item.metallurgymod.brass_sword": "Brass Sword",
+  "item.metallurgymod.brass_axe": "Brass Axe",
+  "item.metallurgymod.brass_pickaxe": "Brass Pickaxe",
+  "item.metallurgymod.brass_shovel": "Brass Shovel",
+  "item.metallurgymod.brass_hoe": "Brass Hoe",
+  "item.metallurgymod.angmallen_sword": "Angmallen Sword",
+  "item.metallurgymod.angmallen_axe": "Angmallen Axe",
+  "item.metallurgymod.angmallen_pickaxe": "Angmallen Pickaxe",
+  "item.metallurgymod.angmallen_shovel": "Angmallen Shovel",
+  "item.metallurgymod.angmallen_hoe": "Angmallen Hoe",
+  "item.metallurgymod.steel_sword": "Steel Sword",
+  "item.metallurgymod.steel_axe": "Steel Axe",
+  "item.metallurgymod.steel_pickaxe": "Steel Pickaxe",
+  "item.metallurgymod.steel_shovel": "Steel Shovel",
+  "item.metallurgymod.steel_hoe": "Steel Hoe",
+  "item.metallurgymod.damascus_steel_sword": "Damascus Steel Sword",
+  "item.metallurgymod.damascus_steel_axe": "Damascus Steel Axe",
+  "item.metallurgymod.damascus_steel_pickaxe": "Damascus Steel Pickaxe",
+  "item.metallurgymod.damascus_steel_shovel": "Damascus Steel Shovel",
+  "item.metallurgymod.damascus_steel_hoe": "Damascus Steel Hoe",
+  "item.metallurgymod.bronze_sword": "Bronze Sword",
+  "item.metallurgymod.bronze_axe": "Bronze Axe",
+  "item.metallurgymod.bronze_pickaxe": "Bronze Pickaxe",
+  "item.metallurgymod.bronze_shovel": "Bronze Shovel",
+  "item.metallurgymod.bronze_hoe": "Bronze Hoe",
+  "item.metallurgymod.silver_sword": "Silver Sword",
+  "item.metallurgymod.silver_axe": "Silver Axe",
+  "item.metallurgymod.silver_pickaxe": "Silver Pickaxe",
+  "item.metallurgymod.silver_shovel": "Silver Shovel",
+  "item.metallurgymod.silver_hoe": "Silver Hoe",
+  "item.metallurgymod.electrum_sword": "Electrum Sword",
+  "item.metallurgymod.electrum_axe": "Electrum Axe",
+  "item.metallurgymod.electrum_pickaxe": "Electrum Pickaxe",
+  "item.metallurgymod.electrum_shovel": "Electrum Shovel",
+  "item.metallurgymod.electrum_hoe": "Electrum Hoe",
+  "item.metallurgymod.hepatizon_sword": "Hepatizon Sword",
+  "item.metallurgymod.hepatizon_axe": "Hepatizon Axe",
+  "item.metallurgymod.hepatizon_pickaxe": "Hepatizon Pickaxe",
+  "item.metallurgymod.hepatizon_shovel": "Hepatizon Shovel",
+  "item.metallurgymod.hepatizon_hoe": "Hepatizon Hoe",
+  "item.metallurgymod.platinum_sword": "Platinum Sword",
+  "item.metallurgymod.platinum_axe": "Platinum Axe",
+  "item.metallurgymod.platinum_pickaxe": "Platinum Pickaxe",
+  "item.metallurgymod.platinum_shovel": "Platinum Shovel",
+  "item.metallurgymod.platinum_hoe": "Platinum Hoe",
 
 
 
