CrusherBlock without gui

--- a/src/main/resources/assets/metallurgymod/lang/en_us.json
+++ b/src/main/resources/assets/metallurgymod/lang/en_us.json
@@ -78,5 +78,6 @@
   "block.metallurgymod.silver_ore": "Silver Ore",
   "block.metallurgymod.zinc_ore": "Zinc Ore",
   "block.metallurgymod.platinum_ore": "Platinum Ore",
-  "block.metallurgymod.iron_smelter": "Iron Smelter"
+  "block.metallurgymod.iron_smelter": "Iron Smelter",
+  "block.metallurgymod.crusher_block": "Crusher"
 }
