Dusts without Textures(WIP) + Crusher Recipes (ORE CRUSH RECIPES NEED TO FIX COUNT)

--- a/src/main/resources/assets/metallurgymod/lang/en_us.json
+++ b/src/main/resources/assets/metallurgymod/lang/en_us.json
@@ -66,6 +66,24 @@
   "item.metallurgymod.platinum_pickaxe": "Platinum Pickaxe",
   "item.metallurgymod.platinum_shovel": "Platinum Shovel",
   "item.metallurgymod.platinum_hoe": "Platinum Hoe",
+  "item.metallurgymod.iron_dust": "Iron Dust",
+  "item.metallurgymod.gold_dust": "Gold Dust",
+  "item.metallurgymod.copper_dust": "Copper Dust",
+  "item.metallurgymod.silver_dust": "Silver Dust",
+  "item.metallurgymod.zinc_dust": "Zinc Dust",
+  "item.metallurgymod.brass_dust": "Brass Dust",
+  "item.metallurgymod.bronze_dust": "Bronze Dust",
+  "item.metallurgymod.angmallen_dust": "Angmallen Dust",
+  "item.metallurgymod.electrum_dust": "Electrum Dust",
+  "item.metallurgymod.platinum_dust": "Platinum Dust",
+  "item.metallurgymod.steel_dust": "Steel Dust",
+  "item.metallurgymod.damascus_steel_dust": "Damascus Steel Dust",
+  "item.metallurgymod.tin_dust": "Tin Dust",
+  "item.metallurgymod.hepatizon_dust": "Hepatizon Dust",
+  "item.metallurgymod.diamond_dust": "Diamond Dust",
+  "item.metallurgymod.coal_dust": "Coal Dust",
+  "item.metallurgymod.emerald_dust": "Emerald Dust",
+
 
 
 
