--- a/src/main/resources/assets/metallurgymod/lang/en_us.json
+++ b/src/main/resources/assets/metallurgymod/lang/en_us.json
@@ -133,6 +133,70 @@
   "block.metallurgymod.zinc_ore": "Zinc Ore",
   "block.metallurgymod.platinum_ore": "Platinum Ore",
   "block.metallurgymod.iron_smelter": "Iron Smelter",
+  "block.metallurgymod.compressor_block": "Compressor",
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+  "entity.minecraft.villager.metallurgist": "Metallurgist",
   "block.metallurgymod.crusher_block": "Crusher",
   "block.metallurgymod.stone_smelter": "Stone Smelter"
 }
