--- a/src/main/resources/assets/metallurgymod/lang/en_us.json
+++ b/src/main/resources/assets/metallurgymod/lang/en_us.json
@@ -83,7 +83,14 @@
   "item.metallurgymod.diamond_dust": "Diamond Dust",
   "item.metallurgymod.coal_dust": "Coal Dust",
   "item.metallurgymod.emerald_dust": "Emerald Dust",
-
+  "item.metallurgymod.angmallen_plate": "Angmallen Plate",
+  "item.metallurgymod.brass_plate": "Brass Plate",
+  "item.metallurgymod.bronze_plate": "Bronze Plate",
+  "item.metallurgymod.electrum_plate": "Electrum Plate",
+  "item.metallurgymod.hepatizon_plate": "Hepatizon Plate",
+  "item.metallurgymod.steel_plate": "Steel Plate",
+  "item.metallurgymod.damascus_steel_plate": "Damascus Steel Plate",
+  "item.metallurgymod.platinum_plate": "Platinum Plate",
 
 
 
