Lang en_us armor update

--- a/src/main/resources/assets/metallurgymod/lang/en_us.json
+++ b/src/main/resources/assets/metallurgymod/lang/en_us.json
@@ -91,11 +91,43 @@
   "item.metallurgymod.steel_plate": "Steel Plate",
   "item.metallurgymod.damascus_steel_plate": "Damascus Steel Plate",
   "item.metallurgymod.platinum_plate": "Platinum Plate",
-
-
-
-
-
+  "item.metallurgymod.silver_plate": "Silver Plate",
+  "item.metallurgymod.angmallen_helmet": "Angmallen Helmet",
+  "item.metallurgymod.angmallen_chestplate": "Angmallen Chestplate",
+  "item.metallurgymod.angmallen_leggings": "Angmallen Leggings",
+  "item.metallurgymod.angmallen_boots": "Angmallen Boots",
+  "item.metallurgymod.brass_helmet": "Brass Helmet",
+  "item.metallurgymod.brass_chestplate": "Brass Chestplate",
+  "item.metallurgymod.brass_leggings": "Brass Leggings",
+  "item.metallurgymod.brass_boots": "Brass Boots",
+  "item.metallurgymod.bronze_helmet": "Bronze Helmet",
+  "item.metallurgymod.bronze_chestplate": "Bronze Chestplate",
+  "item.metallurgymod.bronze_leggings": "Bronze Leggings",
+  "item.metallurgymod.bronze_boots": "Bronze Boots",
+  "item.metallurgymod.steel_helmet": "Steel Helmet",
+  "item.metallurgymod.steel_chestplate": "Steel Chestplate",
+  "item.metallurgymod.steel_leggings": "Steel Leggings",
+  "item.metallurgymod.steel_boots": "Steel Boots",
+  "item.metallurgymod.damascus_steel_helmet": "Damascus Steel Helmet",
+  "item.metallurgymod.damascus_steel_chestplate": "Damascus Steel Chestplate",
+  "item.metallurgymod.damascus_steel_leggings": "Damascus Steel Leggings",
+  "item.metallurgymod.damascus_steel_boots": "Damascus Steel Boots",
+  "item.metallurgymod.electrum_helmet": "Electrum Helmet",
+  "item.metallurgymod.electrum_chestplate": "Electrum Chestplate",
+  "item.metallurgymod.electrum_leggings": "Electrum Leggings",
+  "item.metallurgymod.electrum_boots": "Electrum Boots",
+  "item.metallurgymod.hepatizon_helmet": "Hepatizon Helmet",
+  "item.metallurgymod.hepatizon_chestplate": "Hepatizon Chestplate",
+  "item.metallurgymod.hepatizon_leggings": "Hepatizon Leggings",
+  "item.metallurgymod.hepatizon_boots": "Hepatizon Boots",
+  "item.metallurgymod.silver_helmet": "Silver Helmet",
+  "item.metallurgymod.silver_chestplate": "Silver Chestplate",
+  "item.metallurgymod.silver_leggings": "Silver Leggings",
+  "item.metallurgymod.silver_boots": "Silver Boots",
+  "item.metallurgymod.platinum_helmet": "Platinum Helmet",
+  "item.metallurgymod.platinum_chestplate": "Platinum Chestplate",
+  "item.metallurgymod.platinum_leggings": "Platinum Leggings",
+  "item.metallurgymod.platinum_boots": "Platinum Boots",
 
 
 
