lang en_us plates 2

--- a/src/main/resources/assets/metallurgymod/lang/en_us.json
+++ b/src/main/resources/assets/metallurgymod/lang/en_us.json
@@ -92,6 +92,11 @@
   "item.metallurgymod.damascus_steel_plate": "Damascus Steel Plate",
   "item.metallurgymod.platinum_plate": "Platinum Plate",
   "item.metallurgymod.silver_plate": "Silver Plate",
+  "item.metallurgymod.tin_plate": "Tin Plate",
+  "item.metallurgymod.copper_plate": "Copper Plate",
+  "item.metallurgymod.zinc_plate": "Zinc Plate",
+  "item.metallurgymod.gold_plate": "Gold Plate",
+  "item.metallurgymod.iron_plate": "Iron Plate",
   "item.metallurgymod.angmallen_helmet": "Angmallen Helmet",
   "item.metallurgymod.angmallen_chestplate": "Angmallen Chestplate",
   "item.metallurgymod.angmallen_leggings": "Angmallen Leggings",
