--- a/src/main/resources/assets/metallurgymod/lang/en_us.json
+++ b/src/main/resources/assets/metallurgymod/lang/en_us.json
@@ -133,6 +133,7 @@
   "item.metallurgymod.platinum_chestplate": "Platinum Chestplate",
   "item.metallurgymod.platinum_leggings": "Platinum Leggings",
   "item.metallurgymod.platinum_boots": "Platinum Boots",
+  "item.metallurgymod.compressed_coal": "Compressed Coal",
 
 
 
