--- a/src/main/resources/assets/metallurgymod/lang/en_us.json
+++ b/src/main/resources/assets/metallurgymod/lang/en_us.json
@@ -193,6 +193,7 @@
   "block.metallurgymod.steel_block": "Steel Block",
   "block.metallurgymod.damascus_steel_block": "Damascus Steel Block",
   "block.metallurgymod.electrum_block": "Electrum Block",
+  "block.metallurgymod.steel_smelter": "Steel Smelter",
 
 
 
